cluster-utilities/k8s-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: k8s-dashboard
  annotations:
    cert-manager.io/cluster-issuer: "ishiori-local-general-issuer"
    cert-manager.io/common-name: "dash.kube.ishiori.lnet"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
    - host: dash.kube.ishiori.lnet
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard-kong-proxy
                port:
                  number: 443
  tls:
    - hosts:
        - dash.kube.ishiori.lnet
      secretName: kubernetes-dashboard-tls
